# Tulip-Plugins

./: .cproject  README.md  Tracker.ods
ScriptEditor/: ScriptEditor.pro  main.cpp  scripteditor.cpp  scripteditor.h  scripteditor.ui
ScriptTulip/: CMakeLists.txt  Documentation script Tulip.odt  INSTALL  QBooleanProperty.cpp  QBooleanProperty.h  QColorProperty.cpp  QColorProperty.h  QDoubleProperty.cpp  QDoubleProperty.h  QEdge.cpp  QEdge.h  QGraph.cpp  QGraph.h  QGraphProperty.cpp  QGraphProperty.h  QIntegerProperty.cpp  QIntegerProperty.h  QIterator.cpp  QIterator.h  QLayoutProperty.cpp  QLayoutProperty.h  QNode.cpp  QNode.h  QProperty.cpp  QProperty.h  QSize3D.h  QSizeProperty.h  QStdSet.h  QStringProperty.cpp  QStringProperty.h  QTemplateProperties.cpp  QTemplateProperties.def  QTemplateProperties.h  QTemplateProperty.cpp  QTemplateProperty.h  ScriptFunctions.h  Translater.cpp  Translater.h  TulipScriptEngine.cpp  TulipScriptEngine.h  (+13 more)
ScriptTulip/editor/: ScriptInteractor.cpp  ScriptInteractor.h  editor.cpp  editor.h  editor.pro  main.cpp
ScriptTulip/engine/: QBooleanProperty.cpp  QBooleanProperty.h  QColorProperty.cpp  QColorProperty.h  QControllerViewsManager.cpp  QControllerViewsManager.h  QDoubleProperty.cpp  QDoubleProperty.h  QEdge.cpp  QEdge.h  QGraph.cpp  QGraph.h  QGraphProperty.cpp  QGraphProperty.h  QIntegerProperty.cpp  QIntegerProperty.h  QIterator.cpp  QIterator.h  QLayoutProperty.cpp  QLayoutProperty.h  QNode.cpp  QNode.h  QProperty.cpp  QProperty.h  QSize3D.cpp  QSize3D.h  QSizeProperty.cpp  QSizeProperty.h  QStdSet.h  QStringProperty.cpp  QStringProperty.h  QView.cpp  QView.h  ScriptFunctions.h  Scriptmacros.h  TulipScriptEngine.cpp  TulipScriptEngine.h  engine.pro
ScriptTulip/engine-jambi/: engine-jambi.pro
ScriptTulip/engine/test/: AddEdgeTest.h  AddNodeTest.cpp  AddNodeTest.h  EdgeIterationTest.h  GraphCreateTest.cpp  LoadGraphTest.h  QGraphTest.h  QPropertyTest.cpp  QPropertyTest.h  utilsTest.h
ScriptTulip/jambi/: build.xml  global.h  jambi.pro  jambi_build.pro  typesystem.xml
ScriptTulip/jambi/jambiPlugin/: build.xml  jambi_plugin.cpp  jambi_plugin.pro  jambi_plugin_loader.h
ScriptTulip/script/: global.h  script.pro  typesystem.xml
ScriptTulip/script/generated_cpp/tulip_script/: plugin.cpp  qtscript_QBooleanProperty.cpp  qtscript_QColorProperty.cpp  qtscript_QControllerViewsManager.cpp  qtscript_QDoubleProperty.cpp  qtscript_QEdge.cpp  qtscript_QGraph.cpp  qtscript_QGraphProperty.cpp  qtscript_QIntegerProperty.cpp  qtscript_QIterator.cpp  qtscript_QLayoutProperty.cpp  qtscript_QNode.cpp  qtscript_QProperty.cpp  qtscript_QSize3D.cpp  qtscript_QSizeProperty.cpp  qtscript_QStringProperty.cpp  qtscript_QView.cpp  qtscriptshell_QBooleanProperty.cpp  qtscriptshell_QBooleanProperty.h  qtscriptshell_QColorProperty.cpp  qtscriptshell_QColorProperty.h  qtscriptshell_QDoubleProperty.cpp  qtscriptshell_QDoubleProperty.h  qtscriptshell_QEdge.cpp  qtscriptshell_QEdge.h  qtscriptshell_QGraph.cpp  qtscriptshell_QGraph.h  qtscriptshell_QGraphProperty.cpp  qtscriptshell_QGraphProperty.h  qtscriptshell_QIntegerProperty.cpp  qtscriptshell_QIntegerProperty.h  qtscriptshell_QIterator.cpp  qtscriptshell_QIterator.h  qtscriptshell_QLayoutProperty.cpp  qtscriptshell_QLayoutProperty.h  qtscriptshell_QNode.cpp  qtscriptshell_QNode.h  qtscriptshell_QProperty.cpp  qtscriptshell_QProperty.h  qtscriptshell_QSize3D.cpp  (+7 more)
ScriptTulip/test/: AddEdgeTest.cpp  AddEdgeTest.h  AddNodeTest.cpp  AddNodeTest.h  EdgeIterationTest.cpp  EdgeIterationTest.h  FetchPropertyTest.cpp  FetchPropertyTest.h  GetNodeValueTest.cpp  GetNodeValueTest.h  GraphCreateTest.cpp  GraphCreateTest.h  IterationTest.cpp  IterationTest.h  LoadGraphTest.cpp  LoadGraphTest.h  Main.java  Makefile  NodeIterationTest.cpp  NodeIterationTest.h  QGraphTest.cpp  QGraphTest.h  QPropertyTest.cpp  QPropertyTest.h  SaveGraphTest.cpp  SaveGraphTest.h  SetNodeValueTest.cpp  SetNodeValueTest.h  SetPropertyTest.cpp  SetPropertyTest.h  TestAddEdge.cpp  TestAddEdge.h  TestAddNode.cpp  TestAddNode.h  TestGraphCreate.cpp  TestGraphCreate.h  TestSkeleton.cpp  TestSkeleton.h  saveGraphTest.cpp  saveGraphTest.h  (+4 more)
ScriptTulip/translater/: CompileTranslatedPlugin.pro  Translater.cpp  Translater.h  Translater.pro  footer.txt  header.txt  translater.pro
ScriptTulip/unit_test/: AddEdgeTest.cpp  Makefile  NodeIterationTest.h  QGraphTest.cpp  QPropertyTest.cpp  SaveGraphTest.h  TestSkeleton.h  unit_test.pro
miniprojet/: .cproject  Application.cpp  Application.h  Axis.cpp  Axis.h  CurveGroup.cpp  CurveGroup.h  CurveViewer.cpp  CurveViewer.h  Data.cpp  Data.h  DataScript.h  DataScriptClass.cpp  DataScriptClass.h  DataTestCase.cpp  Graphic.h  GraphicLegend.h  HistogramGroup.cpp  HistogramGroup.h  HistogramViewer.cpp  HistogramViewer.h  ICurveContainer.h  IData.h  IGraphic.h  IGraphicContainer.h  IModel.h  Model.cpp  Model.h  Observable.cpp  Observable.h  Observer.cpp  Observer.h  QData.h  QGraphic.h  ScriptViewer.cpp  ScriptViewer.h  ScriptViewer.ui  ScriptViewer_ui.h  Viewer.cpp  Viewer.h  (+7 more)
miniprojet/testExamples/: addRemoveItemsRandomTest.cpp  testObserver.cpp  testRunner.cpp
miniprojet/tests/: AddDeleteTest.cpp  AddDeleteTest.h  ColorGraphicTest.cpp  ColorGraphicTest.h  CurveWidgetTest.cpp  CurveWidgetTest.h  DataTest.cpp  DataTest.h  DataTestCase.cpp  DataTestCase.h  GraphicLegendTest.cpp  GraphicLegendTest.h  GraphicsWidgetTest.cpp  GraphicsWidgetTest.h  HistogramWidgetTest.cpp  HistogramWidgetTest.h  ModelTest.cpp  ModelTest.h  ScriptChangeGraphicTest.cpp  ScriptChangeGraphicTest.h  ScriptTest.cpp  ScriptTest.h  ScriptTestUtility.h  ScriptWidgetTest.cpp  ScriptWidgetTest.h  testObserver.cpp  testRunner.cpp
test/: DataTestCase.cpp  DataTestCase.h  IDataTest.h  IDataTestCase.cpp  test  test.txt  testRunner.cpp
tulip-plugins/: IModel.h
